# ModelX

./: .env.example  Dockerfile  PHASE_14_17_VERIFICATION_REPORT.md  PROJECT_CHANGE_REPORT.md  README.md  VOICE_AGENT_IMPLEMENTATION_PLAN.md  analysis_report.json  docker-compose.yml  pyproject.toml  run.py  test_orchestrator_protection.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_meta_learning.py  003_autonomous_research.py  005_phase7_6_benchmarks.py  006_phase8_tools.py  007_phase9_world_model.py  008_phase10_architecture.py  009_phase10g_evolution.py  010_phase11_capabilities.py  011_phase12_projects.py  012_phase7_multimodal.py  013_phase8_swarm.py
docs/analysis/: 01_executive_summary.md  02_repository_analysis.md  03_architecture.md  07_mcp_integration.md  09_workflow_engine.md  10_api_documentation.md  12_performance_audit.md  13_code_quality.md  16_improvement_roadmap.md
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
modelx_voice/: __init__.py  main.py
modelx_voice/audio/: capture.py
modelx_voice/brain/: llm_client.py
modelx_voice/config/: __init__.py  setup_wizard.py
modelx_voice/stt/: __init__.py  whisper_wrapper.py
modelx_voice/tts/: piper_wrapper.py
modelx_voice/ui/: commands.py  terminal.py
modelx_voice/voices/: downloader.py
scientific_validation_results/: FINAL_VALIDATION_REPORT.md
src/agent_society/: __init__.py  agent_registry.py  society_runtime.py  task_marketplace.py
src/agents/: architecture_nodes.py  autonomous_research_loop.py  capability_nodes.py  cognition_nodes.py  evolution_nodes.py  goal_generator.py  orchestrator.py  planner_v2.py  project_nodes.py  research_director.py  state.py  world_model_nodes.py
src/api/: __init__.py  auth.py  dependencies.py  main.py  middleware.py
src/architecture/: architecture_benchmark.py  architecture_generator.py  architecture_mapper.py  architecture_registry.py  architecture_sandbox.py  (+8 more)
tests/: conftest.py  test_decision_intelligence.py
validation_results/: validation_report.md  validation_summary.json
(+306 files in other folders)
