[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autonomous-agent-platform"
version = "0.1.0"
description = "Phase 1 AGI-Inspired Autonomous Agent Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Agent Platform Team" },
]

dependencies = [
    # Web Framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # LLM & Agent Framework
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0",

    # Vector Database
    "qdrant-client>=1.12.0",

    # Embeddings
    "openai>=1.50.0",

    # Database
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "neo4j>=5.24.0",

    # Cache
    "redis>=5.0.0",

    # Data Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # HTTP Client
    "httpx>=0.27.0",

    # Research Tools
    "arxiv>=2.1.0",
    "wikipedia-api>=0.7.0",

    # Document Processing
    "tiktoken>=0.8.0",
    "pypdf>=5.0.0",

    # Auth
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",

    # Logging & Observability
    "structlog>=24.0.0",

    # Resilience
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.34.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
